--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.edcan.acar">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".AppController"
         android:allowBackup="true"
