--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.afollestad.material-dialogs:commons:0.9.0.1'
     compile 'com.akexorcist:bluetoothspp:1.0.0'
 }
 
